Fix sonar code smells issues